--- a/ls-web-local/src/index.html
+++ b/ls-web-local/src/index.html
@@ -11,10 +11,15 @@
         bottom: 0;
         left: 0;
     }
+    .ace-ts-error {
+      position: absolute;
+      background-color: red;
+    }
 </style>
 </head>
 <body>
   <div id="editor">function hoge() {
+  console.logggg(1);
 }</div>
 </body>
 </html>
