--- a/ls-web-local/src/index.html
+++ b/ls-web-local/src/index.html
@@ -12,6 +12,10 @@
       padding: 0;
     }
 
+    #app {
+      height: 100vh;
+    }
+
     #editor {
         position: absolute;
         top: 0;
@@ -32,6 +36,15 @@
       border-bottom: 5px solid hsla(0,0%,100%,0);
       cursor: row-resize;
       width: 100%;
+    }
+    .Resizer.vertical {
+      height: 100%;
+      background-color: #444;
+      cursor: col-resize;
+      width: 10px;
+      margin: 0 -5px;
+      border-left: 5px solid hsla(0,0%,100%,0);
+      border-right: 5px solid hsla(0,0%,100%,0);
     }
 
 </style>
