--- a/ls-web-local/src/index.html
+++ b/ls-web-local/src/index.html
@@ -7,6 +7,14 @@
     html {
       background-color: #2f3129;
     }
+    body {
+      font-size: 20px;
+    }
+    @media screen and (max-width: 750px) {
+      body {
+        font-size: 12px;
+      }
+    }
     body, div, ul, li {
       margin: 0;
       padding: 0;
