--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <meta name="theme-color" content="#3498db" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <meta name="description" content="" />
+    <meta name="description" content="Explain what TypeScript server(tsserver) does under your editors" />
 
-    <meta property="og:title" content="slide" />
+    <meta property="og:title" content="TypeScript Server Side Anatomy" />
     <meta property="og:type" content="article" />
-    <meta property="og:url" content="" />
-    <meta property="og:image" content="" />
+    <meta property="og:url" content="https://quramy.github.io/ts-server-side-anatomy/" />
+    <meta property="og:image" content="https://quramy.github.io/ts-server-side-anatomy/assets/ogp.png" />
     <meta property="og:site_name" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:description" content="Explain what TypeScript server(tsserver) does under your editors" />
     <title>
-      slide
+      TypeScript Server Side Anatomy
     </title>
   <link href="vendor.5.83e85936a622d9e9dd5b.css" rel="stylesheet"><link href="main.1.b3402db420b26cc0cfd2.css" rel="stylesheet"></head>
 
   <body>
     <div id="root"></div>
-  <script type="text/javascript" src="runtime.4ea2ebfe2998fa536142.bundle.js"></script><script type="text/javascript" src="vendor.5.83e85936a622d9e9dd5b.bundle.js"></script><script type="text/javascript" src="main.1.b3402db420b26cc0cfd2.bundle.js"></script></body>
+  <script type="text/javascript" src="runtime.110d7de528b367051969.bundle.js"></script><script type="text/javascript" src="vendor.5.83e85936a622d9e9dd5b.bundle.js"></script><script type="text/javascript" src="main.1.b3402db420b26cc0cfd2.bundle.js"></script></body>
 </html>
